rust/crates/ccusage-adapter-all/src/snapshots/ccusage_adapter_all__tests__devin_fixture_daily_table.snap
---
source: crates/ccusage-adapter-all/src/tests.rs
expression: "serde_json::to_string_pretty(&table_snapshot(&daily.rows,\nAgentReportKind::Daily, &daily.detected_agents,)).unwrap()"
---
{
  "headers": [
    "Date",
    "Agent",
    "Models",
    "Input",
    "Output",
    "Cache Create",
    "Cache Read",
    "Total Tokens",
    "Cost (USD)"
  ],
  "rows": [
    {
      "cells": [
        "2099-01-02",
        "All",
        "",
        "400",
        "100",
        "200",
        "400",
        "1,100",
        "$0.00"
      ],
      "kind": "row"
    },
    {
      "cells": [
        "",
        "- Devin",
        "- swe-1.7",
        "400",
        "100",
        "200",
        "400",
        "1,100",
        "$0.00"
      ],
      "kind": "agent-breakdown"
    },
    {
      "cells": [
        "2099-01-03",
        "All",
        "",
        "200",
        "50",
        "0",
        "300",
        "550",
        "$0.00"
      ],
      "kind": "row"
    },
    {
      "cells": [
        "",
        "- Devin",
        "- swe-1.7",
        "200",
        "50",
        "0",
        "300",
        "550",
        "$0.00"
      ],
      "kind": "agent-breakdown"
    },
    {
      "cells": [
        "Total",
        "",
        "",
        "600",
        "150",
        "200",
        "700",
        "1,650",
        "$0.00"
      ],
      "kind": "total"
    }
  ],
  "title": "Coding (Agent) CLI Usage Report - Daily\nDetected: Devin"
}
