rust/crates/ccusage-adapter-all/src/snapshots/ccusage_adapter_all__tests__devin_fixture_monthly_table.snap
---
source: crates/ccusage-adapter-all/src/tests.rs
expression: "serde_json::to_string_pretty(&table_snapshot(&monthly.rows,\nAgentReportKind::Monthly, &monthly.detected_agents,)).unwrap()"
---
{
  "headers": [
    "Month",
    "Agent",
    "Models",
    "Input",
    "Output",
    "Cache Create",
    "Cache Read",
    "Total Tokens",
    "Cost (USD)"
  ],
  "rows": [
    {
      "cells": [
        "2099-01",
        "All",
        "",
        "600",
        "150",
        "200",
        "700",
        "1,650",
        "$0.00"
      ],
      "kind": "row"
    },
    {
      "cells": [
        "",
        "- Devin",
        "- swe-1.7",
        "600",
        "150",
        "200",
        "700",
        "1,650",
        "$0.00"
      ],
      "kind": "agent-breakdown"
    },
    {
      "cells": [
        "Total",
        "",
        "",
        "600",
        "150",
        "200",
        "700",
        "1,650",
        "$0.00"
      ],
      "kind": "total"
    }
  ],
  "title": "Coding (Agent) CLI Usage Report - Monthly\nDetected: Devin"
}
