rust/crates/ccusage-adapter-all/src/snapshots/ccusage_adapter_all__tests__devin_fixture_session_table.snap
---
source: crates/ccusage-adapter-all/src/tests.rs
expression: "serde_json::to_string_pretty(&table_snapshot(&session.rows,\nAgentReportKind::Session, &session.detected_agents,)).unwrap()"
---
{
  "headers": [
    "Session",
    "Agent",
    "Models",
    "Input",
    "Output",
    "Cache Create",
    "Cache Read",
    "Total Tokens",
    "Cost (USD)"
  ],
  "rows": [
    {
      "cells": [
        "veil-vibraphone",
        "Devin",
        "- swe-1.7",
        "600",
        "150",
        "200",
        "700",
        "1,650",
        "$0.00"
      ],
      "kind": "row"
    },
    {
      "cells": [
        "Total",
        "",
        "",
        "600",
        "150",
        "200",
        "700",
        "1,650",
        "$0.00"
      ],
      "kind": "total"
    }
  ],
  "title": "Coding (Agent) CLI Usage Report - Session\nDetected: Devin"
}
