rust/crates/ccusage-adapter-all/src/snapshots/ccusage_adapter_all__tests__renders_multi_section_json_with_command_totals.snap
---
source: crates/ccusage-adapter-all/src/tests.rs
assertion_line: 562
expression: "serde_json::to_string_pretty(&report).unwrap()"
---
{
  "daily": [
    {
      "agent": "all",
      "cacheCreationTokens": 0,
      "cacheReadTokens": 10,
      "inputTokens": 100,
      "metadata": {
        "agents": [
          "codex"
        ]
      },
      "modelBreakdowns": [],
      "modelsUsed": [
        "gpt-5"
      ],
      "outputTokens": 20,
      "period": "2026-01-02",
      "pluginBreakdowns": [],
      "skillBreakdowns": [],
      "sourceTypeBreakdowns": [],
      "totalCost": 0.01,
      "totalTokens": 120
    }
  ],
  "monthly": [
    {
      "agent": "all",
      "cacheCreationTokens": 0,
      "cacheReadTokens": 10,
      "inputTokens": 100,
      "metadata": {
        "agents": [
          "codex"
        ]
      },
      "modelBreakdowns": [],
      "modelsUsed": [
        "gpt-5"
      ],
      "outputTokens": 20,
      "period": "2026-01",
      "pluginBreakdowns": [],
      "skillBreakdowns": [],
      "sourceTypeBreakdowns": [],
      "totalCost": 0.01,
      "totalTokens": 120
    }
  ],
  "session": [
    {
      "agent": "codex",
      "cacheCreationTokens": 0,
      "cacheReadTokens": 10,
      "inputTokens": 100,
      "metadata": {
        "lastActivity": "2026-01-02T00:00:00.000Z"
      },
      "modelBreakdowns": [],
      "modelsUsed": [
        "gpt-5"
      ],
      "outputTokens": 20,
      "period": "session-a",
      "pluginBreakdowns": [],
      "skillBreakdowns": [],
      "sourceTypeBreakdowns": [],
      "totalCost": 0.01,
      "totalTokens": 120
    }
  ],
  "totals": {
    "cacheCreationTokens": 0,
    "cacheReadTokens": 10,
    "inputTokens": 100,
    "outputTokens": 20,
    "totalCost": 0.01,
    "totalTokens": 120
  }
}
