rust/crates/ccusage-adapter-all/src/snapshots/ccusage_adapter_all__tests__renders_opt_in_codex_source_breakdowns_in_unified_json_and_table_rows-2.snap
---
source: crates/ccusage-adapter-all/src/tests.rs
expression: "source_table_row(&sources[0], false, false)"
---
[
    "",
    "- CLI",
    "- gpt-5",
    "100",
    "10",
    "0",
    "0",
    "110",
    "$0.00",
]
