rust/crates/ccusage-adapter-all/src/snapshots/ccusage_adapter_all__tests__zcode_fixture_monthly_json.snap
---
source: crates/ccusage-adapter-all/src/tests.rs
expression: "report_json(&monthly.rows, AgentReportKind::Monthly)"
---
{
  "monthly": [
    {
      "agent": "all",
      "cacheCreationTokens": 45,
      "cacheReadTokens": 65,
      "inputTokens": 190,
      "metadata": {
        "agents": [
          "zcode"
        ]
      },
      "modelBreakdowns": [
        {
          "cacheCreationTokens": 30,
          "cacheReadTokens": 40,
          "cost": 0.0003224,
          "inputTokens": 130,
          "modelName": "GLM-5.3",
          "outputTokens": 20
        },
        {
          "cacheCreationTokens": 15,
          "cacheReadTokens": 25,
          "cost": 0.00015549999999999999,
          "inputTokens": 60,
          "modelName": "GLM-5.2",
          "outputTokens": 10
        }
      ],
      "modelsUsed": [
        "GLM-5.2",
        "GLM-5.3"
      ],
      "outputTokens": 30,
      "period": "2099-01",
      "totalCost": 0.00047789999999999996,
      "totalTokens": 330
    },
    {
      "agent": "all",
      "cacheCreationTokens": 0,
      "cacheReadTokens": 10,
      "inputTokens": 40,
      "metadata": {
        "agents": [
          "zcode"
        ]
      },
      "modelBreakdowns": [
        {
          "cacheCreationTokens": 0,
          "cacheReadTokens": 10,
          "cost": 0.0000806,
          "inputTokens": 40,
          "modelName": "GLM-5.3",
          "outputTokens": 5
        }
      ],
      "modelsUsed": [
        "GLM-5.3"
      ],
      "outputTokens": 5,
      "period": "2099-02",
      "totalCost": 0.0000806,
      "totalTokens": 55
    }
  ],
  "totals": {
    "cacheCreationTokens": 45,
    "cacheReadTokens": 75,
    "inputTokens": 230,
    "outputTokens": 35,
    "totalCost": 0.0005585,
    "totalTokens": 385
  }
}
